package edu.hitsz.prop;

public class bombnotifier {
    
}
